--- a/source/index.html
+++ b/source/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
   <head>
-    <link rel="stylesheet" href="./css/style.min.css">
     <link rel="icon" href="favicon.ico">
     <link rel="icon" href="./img/favicons/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="./img/favicons/apple.png">
     <link rel="preload" href="./fonts/oswaldregular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.min.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
@@ -56,7 +56,7 @@
           <picture>
             <source media="(min-width: 1280px)" srcset="./img/promo/promo-food-desktop.webp 1x, ./img/promo/promo-food-desktop@2x.webp 2x">
             <source media="(min-width: 768px)" srcset="./img/promo/promo-food-tablet.webp 1x, ./img/promo/promo-food-tablet@2x.webp 2x">
-            <source srcset="./img/promo/promo-food-mobile.webp 1x, ./img/promo/promo-food-mobile@2x.webp 2x">
+            <source type="image/webp" srcset="./img/promo/promo-food-mobile.webp 1x, ./img/promo/promo-food-mobile@2x.webp 2x">
             <source media="(min-width: 1280px)" srcset="./img/promo/promo-food-desktop.png 1x, ./img/promo/promo-food-desktop@2x.png 2x">
             <source media="(min-width: 768px)" srcset="./img/promo/promo-food-tablet.png 1x, ./img/promo/promo-food-tablet@2x.png 2x">
             <img class="promo__img" src="./img/promo/promo-food-mobile.png" srcset="./img/promo/promo-food-mobile@2x.png 2x" width="280" height="270" alt="изображение упаковки питания cat energy">
@@ -166,14 +166,14 @@
             <div class="example__slides">
               <div class="example__slide example__slide--before example__slide--active">
                 <picture>
-                  <source srcset="./img/example/example-before.webp 1x, ./img/example/example-before@2x.webp 2x">
+                  <source type="image/webp" srcset="./img/example/example-before.webp 1x, ./img/example/example-before@2x.webp 2x">
                   <img class="example__slide-img example__slide-img--before" src="./img/example/example-before.png" srcset="./img/example/example-before@2x.png 2x" height="242" alt="Изображение кота до похудения">
                 </picture>
                 </div>
 
               <div class="example__slide example__slide--after">
                 <picture>
-                  <source srcset="./img/example/example-after.webp 1x, ./img/example/example-after@2x.webp 2x">
+                  <source type="image/webp" srcset="./img/example/example-after.webp 1x, ./img/example/example-after@2x.webp 2x">
                   <img class="example__slide-img example__slide-img--after" src="./img/example/example-after.png" srcset="./img/example/example-after@2x.png" height="242" alt="Изображение кота после похудения">
                 </picture>
               </div>
@@ -205,7 +205,7 @@
           <p class="contacts__text">приглашаем<br>к сотрудничеству дилеров!</p>
           <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 <span>Санкт-Петербург</span></p>
         </div>
-        <iframe class="contacts__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1627216695943!5m2!1sru!2sru" width="100%" height="362" allowfullscreen></iframe>
+        <iframe class="contacts__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1627216695943!5m2!1sru!2sru" height="362" allowfullscreen></iframe>
       </section>
     </main>
 
