--- a/source/catalog.html
+++ b/source/catalog.html
@@ -52,15 +52,20 @@
 
         <article class="product-card">
           <div class="product-card__img-wrapper">
-            <picture>
-              <source media="(min-width: 768px)" srcset="./img/catalog/product-card-1-desktop.webp 1x, ./img/catalog/product-card-1-desktop@2x.webp 2x">
-              <source media="(min-width: 768px)" srcset="./img/catalog/product-card-1-desktop.png 1x, ./img/catalog/product-card-1-desktop@2x.png 2x">
-              <source type="image/webp" srcset="./img/catalog/product-card-1-mobile.webp 1x, ./img/catalog/product-card-1-mobile@2x.webp 2x">
-              <img class="product-card__img product-card__img--small" src="./img/catalog/product-card-1-mobile.png" srcset="./img/catalog/product-card-1-mobile@2x.png 2x" alt="стаканчик с кошачьей едой" width="68" height="86">
-            </picture>
+            <a href="#">
+              <picture>
+                <source media="(min-width: 768px)" srcset="./img/catalog/product-card-1-desktop.webp 1x, ./img/catalog/product-card-1-desktop@2x.webp 2x">
+                <source media="(min-width: 768px)" srcset="./img/catalog/product-card-1-desktop.png 1x, ./img/catalog/product-card-1-desktop@2x.png 2x">
+                <source type="image/webp" srcset="./img/catalog/product-card-1-mobile.webp 1x, ./img/catalog/product-card-1-mobile@2x.webp 2x">
+                <img class="product-card__img product-card__img--small" src="./img/catalog/product-card-1-mobile.png" srcset="./img/catalog/product-card-1-mobile@2x.png 2x" alt="стаканчик с кошачьей едой" width="68" height="86">
+              </picture>
+            </a>
           </div>
           <div class="product-card__description">
-            <h3 class="product-card__title">cat energy pro 500 г</h3>
+            <a class="product-card__link"  href="#">
+              <h3 class="product-card__title">cat energy pro 500 г</h3>
+            </a>
+
             <table class="product-card__table">
               <tr class="product-card__table-row">
                 <td class="product-card__table-name">Масса</td>
@@ -83,16 +88,19 @@
 
         <article class="product-card">
           <div class="product-card__img-wrapper">
-            <picture>
-              <source media="(min-width: 768px)" srcset="./img/catalog/product-card-2-desktop.webp 1x, ./img/catalog/product-card-2-desktop@2x.webp 2x">
-              <source type="image/webp" srcset="./img/catalog/product-card-2-mobile.webp 1x, ./img/catalog/product-card-2-mobile@2x.webp 2x">
-              <source media="(min-width: 768px)" srcset="./img/catalog/product-card-2-desktop.png 1x, ./img/catalog/product-card-2-desktop@2x.png 2x">
-              <img class="product-card__img product-card__img--large" src="./img/catalog/product-card-2-mobile.png" srcset="./img/catalog/product-card-2-mobile@2x.png 2x" alt="стаканчик с кошачьей едой" width="84" height="101">
-            </picture>
+            <a href="#">
+              <picture>
+                <source media="(min-width: 768px)" srcset="./img/catalog/product-card-2-desktop.webp 1x, ./img/catalog/product-card-2-desktop@2x.webp 2x">
+                <source type="image/webp" srcset="./img/catalog/product-card-2-mobile.webp 1x, ./img/catalog/product-card-2-mobile@2x.webp 2x">
+                <source media="(min-width: 768px)" srcset="./img/catalog/product-card-2-desktop.png 1x, ./img/catalog/product-card-2-desktop@2x.png 2x">
+                <img class="product-card__img product-card__img--large" src="./img/catalog/product-card-2-mobile.png" srcset="./img/catalog/product-card-2-mobile@2x.png 2x" alt="стаканчик с кошачьей едой" width="84" height="101">
+              </picture>
+            </a>
           </div>
           <div class="product-card__description">
-            <h3 class="product-card__title">cat energy pro 1000 г</h3>
-
+            <a class="product-card__link"  href="#">
+              <h3 class="product-card__title">cat energy pro 1000 г</h3>
+            </a>
             <table class="product-card__table">
               <tr class="product-card__table-row">
                 <td class="product-card__table-name">Масса</td>
@@ -116,15 +124,19 @@
 
         <article class="product-card">
           <div class="product-card__img-wrapper">
-            <picture>
-              <source media="(min-width: 768px)" srcset="./img/catalog/product-card-3-desktop.webp 1x, ./img/catalog/product-card-3-desktop@2x.webp 2x">
-              <source media="(min-width: 768px)" srcset="./img/catalog/product-card-3-desktop.png 1x, ./img/catalog/product-card-3-desktop@2x.png 2x">
-              <source type="image/webp" srcset="./img/catalog/product-card-3-mobile.webp 1x, ./img/catalog/product-card-3-mobile@2x.webp 2x">
-              <img class="product-card__img product-card__img--medium" src="./img/catalog/product-card-3-mobile.png" srcset="./img/catalog/product-card-3-mobile@2x.png 2x" width="68" height="78" alt="стаканчик с кошачьей едой">
-            </picture>
+            <a href="#">
+              <picture>
+                <source media="(min-width: 768px)" srcset="./img/catalog/product-card-3-desktop.webp 1x, ./img/catalog/product-card-3-desktop@2x.webp 2x">
+                <source media="(min-width: 768px)" srcset="./img/catalog/product-card-3-desktop.png 1x, ./img/catalog/product-card-3-desktop@2x.png 2x">
+                <source type="image/webp" srcset="./img/catalog/product-card-3-mobile.webp 1x, ./img/catalog/product-card-3-mobile@2x.webp 2x">
+                <img class="product-card__img product-card__img--medium" src="./img/catalog/product-card-3-mobile.png" srcset="./img/catalog/product-card-3-mobile@2x.png 2x" width="68" height="78" alt="стаканчик с кошачьей едой">
+              </picture>
+            </a>
           </div>
           <div class="product-card__description">
-            <h3 class="product-card__title">cat energy pro 500 г</h3>
+            <a class="product-card__link"  href="#">
+              <h3 class="product-card__title">cat energy pro 500 г</h3>
+            </a>
 
             <table class="product-card__table">
               <tr class="product-card__table-row">
@@ -149,15 +161,19 @@
 
         <article class="product-card">
           <div class="product-card__img-wrapper">
-            <picture>
-              <source media="(min-width: 768px)" srcset="./img/catalog/product-card-4-desktop.webp 1x, ./img/catalog/product-card-4-desktop@2x.webp 2x">
-              <source media="(min-width: 768px)" srcset="./img/catalog/product-card-4-desktop.png 1x, ./img/catalog/product-card-4-desktop.png 2x">
-              <source type="image/webp" srcset="./img/catalog/product-card-4-mobile.webp 1x, ./img/catalog/product-card-4-mobile@2x.webp 2x">
-              <img class="product-card__img product-card__img--large" src="./img/catalog/product-card-4-mobile.png" srcset="./img/catalog/product-card-4-mobile@2x.png 2x" alt="стаканчик с кошачьей едой" width="84" height="101">
-            </picture>
+            <a href="#">
+              <picture>
+                <source media="(min-width: 768px)" srcset="./img/catalog/product-card-4-desktop.webp 1x, ./img/catalog/product-card-4-desktop@2x.webp 2x">
+                <source media="(min-width: 768px)" srcset="./img/catalog/product-card-4-desktop.png 1x, ./img/catalog/product-card-4-desktop.png 2x">
+                <source type="image/webp" srcset="./img/catalog/product-card-4-mobile.webp 1x, ./img/catalog/product-card-4-mobile@2x.webp 2x">
+                <img class="product-card__img product-card__img--large" src="./img/catalog/product-card-4-mobile.png" srcset="./img/catalog/product-card-4-mobile@2x.png 2x" alt="стаканчик с кошачьей едой" width="84" height="101">
+              </picture>
+            </a>
           </div>
           <div class="product-card__description">
-            <h3 class="product-card__title">cat energy pro 1000 г</h3>
+            <a class="product-card__link" href="#">
+              <h3 class="product-card__title">cat energy pro 1000 г</h3>
+            </a>
 
             <table class="product-card__table">
               <tr class="product-card__table-row">
@@ -182,15 +198,19 @@
 
         <article class="product-card">
           <div class="product-card__img-wrapper">
-            <picture>
-              <source media="(min-width: 768px)" srcset="./img/catalog/product-card-5-desktop.webp 1x, ./img/catalog/product-card-5-desktop@2x.webp 2x">
-              <source media="(min-width: 768px)" srcset="./img/catalog/product-card-5-desktop.png 1x, ./img/catalog/product-card-5-desktop.png 2x">
-              <source type="image/webp" srcset="./img/catalog/product-card-5-mobile.webp 1x, ./img/catalog/product-card-5-mobile@2x.webp 2x">
-              <img class="product-card__img product-card__img--small" src="./img/catalog/product-card-5-mobile.png" srcset="./img/catalog/product-card-5-mobile@2x.png 2x" alt="стаканчик с кошачьей едой" width="68" height="78">
-            </picture>
+            <a href="#">
+              <picture>
+                <source media="(min-width: 768px)" srcset="./img/catalog/product-card-5-desktop.webp 1x, ./img/catalog/product-card-5-desktop@2x.webp 2x">
+                <source media="(min-width: 768px)" srcset="./img/catalog/product-card-5-desktop.png 1x, ./img/catalog/product-card-5-desktop.png 2x">
+                <source type="image/webp" srcset="./img/catalog/product-card-5-mobile.webp 1x, ./img/catalog/product-card-5-mobile@2x.webp 2x">
+                <img class="product-card__img product-card__img--small" src="./img/catalog/product-card-5-mobile.png" srcset="./img/catalog/product-card-5-mobile@2x.png 2x" alt="стаканчик с кошачьей едой" width="68" height="78">
+              </picture>
+            </a>
           </div>
           <div class="product-card__description">
-            <h3 class="product-card__title">cat energy slim 500 г</h3>
+            <a class="product-card__link" href="#">
+              <h3 class="product-card__title">cat energy slim 500 г</h3>
+            </a>
 
             <table class="product-card__table">
               <tr class="product-card__table-row">
@@ -215,15 +235,19 @@
 
         <article class="product-card">
           <div class="product-card__img-wrapper">
-            <picture>
-              <source media="(min-width: 768px)" srcset="./img/catalog/product-card-6-desktop.webp 1x, ./img/catalog/product-card-6-desktop@2x.webp 2x">
-              <source media="(min-width: 768px)" srcset="./img/catalog/product-card-6-desktop.png 1x, ./img/catalog/product-card-6-desktop.png 2x">
-              <source type="image/webp" srcset="./img/catalog/product-card-6-mobile.webp 1x, ./img/catalog/product-card-6-mobile@2x.webp 2x">
-              <img class="product-card__img product-card__img--large" src="./img/catalog/product-card-6-mobile.png" srcset="./img/catalog/product-card-6-mobile@2x.png 2x" alt="стаканчик с кошачьей едой" width="84" height="101">
-            </picture>
+            <a href="#">
+              <picture>
+                <source media="(min-width: 768px)" srcset="./img/catalog/product-card-6-desktop.webp 1x, ./img/catalog/product-card-6-desktop@2x.webp 2x">
+                <source media="(min-width: 768px)" srcset="./img/catalog/product-card-6-desktop.png 1x, ./img/catalog/product-card-6-desktop.png 2x">
+                <source type="image/webp" srcset="./img/catalog/product-card-6-mobile.webp 1x, ./img/catalog/product-card-6-mobile@2x.webp 2x">
+                <img class="product-card__img product-card__img--large" src="./img/catalog/product-card-6-mobile.png" srcset="./img/catalog/product-card-6-mobile@2x.png 2x" alt="стаканчик с кошачьей едой" width="84" height="101">
+              </picture>
+            </a>
           </div>
           <div class="product-card__description">
-            <h3 class="product-card__title">cat energy slim 1000 г</h3>
+            <a class="product-card__link" href="#">
+              <h3 class="product-card__title">cat energy slim 1000 г</h3>
+            </a>
 
             <table class="product-card__table">
               <tr class="product-card__table-row">
@@ -248,15 +272,19 @@
 
         <article class="product-card">
           <div class="product-card__img-wrapper">
-            <picture>
-              <source media="(min-width: 768px)" srcset="./img/catalog/product-card-7-desktop.webp 1x, ./img/catalog/product-card-7-desktop@2x.webp 2x">
-              <source media="(min-width: 768px)" srcset="./img/catalog/product-card-7-desktop.png 1x, ./img/catalog/product-card-7-desktop.png 2x">
-              <source type="image/webp" srcset="./img/catalog/product-card-7-mobile.webp 1x, ./img/catalog/product-card-7-mobile@2x.webp 2x">
-              <img class="product-card__img product-card__img--medium" src="./img/catalog/product-card-7-mobile.png" srcset="./img/catalog/product-card-7-mobile@2x.png 2x" alt="стаканчик с кошачьей едой" width="72" height="84">
-            </picture>
+            <a href="#">
+              <picture>
+                <source media="(min-width: 768px)" srcset="./img/catalog/product-card-7-desktop.webp 1x, ./img/catalog/product-card-7-desktop@2x.webp 2x">
+                <source media="(min-width: 768px)" srcset="./img/catalog/product-card-7-desktop.png 1x, ./img/catalog/product-card-7-desktop.png 2x">
+                <source type="image/webp" srcset="./img/catalog/product-card-7-mobile.webp 1x, ./img/catalog/product-card-7-mobile@2x.webp 2x">
+                <img class="product-card__img product-card__img--medium" src="./img/catalog/product-card-7-mobile.png" srcset="./img/catalog/product-card-7-mobile@2x.png 2x" alt="стаканчик с кошачьей едой" width="72" height="84">
+              </picture>
+            </a>
           </div>
           <div class="product-card__description">
-            <h3 class="product-card__title">cat energy slim 500 г</h3>
+            <a class="product-card__link" href="#">
+              <h3 class="product-card__title">cat energy slim 500 г</h3>
+            </a>
 
             <table class="product-card__table">
               <tr class="product-card__table-row">
@@ -347,7 +375,9 @@
           <p class="contacts__text">приглашаем<br>к сотрудничеству дилеров!</p>
           <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 <span>Санкт-Петербург</span></p>
         </div>
-        <iframe class="contacts__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1627216695943!5m2!1sru!2sru" height="362" allowfullscreen></iframe>
+        <div class="contacts__map-wrapper">
+          <iframe class="contacts__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1627216695943!5m2!1sru!2sru" height="362" allowfullscreen></iframe>
+        </div>
       </section>
     </main>
 
