--- a/source/form.html
+++ b/source/form.html
@@ -27,22 +27,20 @@
       </div>
 
       <nav class="main-nav main-nav--close main-nav--nojs">
-        <div class="main_nav__inner">
-          <ul class="main-nav__list">
+        <ul class="main-nav__list">
 
-            <li class="main-nav__item">
-              <a class="main-nav__link" href="index.html">главная</a>
-            </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="index.html">главная</a>
+          </li>
 
-            <li class="main-nav__item">
-              <a class="main-nav__link" href="catalog.html">каталог продукции</a>
-            </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="catalog.html">каталог продукции</a>
+          </li>
 
-            <li class="main-nav__item">
-              <a class="main-nav__link main-nav__link--active">подбор программы</a>
-            </li>
-          </ul>
-        </div>
+          <li class="main-nav__item">
+            <a class="main-nav__link main-nav__link--active">подбор программы</a>
+          </li>
+        </ul>
       </nav>
     </header>
 
@@ -165,7 +163,10 @@
           <p class="contacts__text">приглашаем<br>к сотрудничеству дилеров!</p>
           <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 <span>Санкт-Петербург</span></p>
         </div>
-        <iframe class="contacts__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1627216695943!5m2!1sru!2sru" height="362" allowfullscreen></iframe>
+        <div class="contacts__map-wrapper">
+          <iframe class="contacts__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1627216695943!5m2!1sru!2sru" height="362" allowfullscreen></iframe>
+        </div>
+
       </section>
     </main>
 
